--- a/nextjs/frontend/src/styles/globals.css
+++ b/nextjs/frontend/src/styles/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -25,4 +25,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
+
+ body {
+  background-color: black;
+ }
